# parallel_benchmark

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark1.cpp  benchmark1c.cpp  benchmark1cpp.cpp  benchmark1mpi.cpp  benchmark2.cpp  benchmark2c.cpp  benchmark2cpp.cpp  benchmark3.cpp  benchmark3c.cpp  benchmark3cpp.cpp  parameters.hpp  parameters1.hpp  parameters2.hpp  parameters3.hpp
data/1/: benchmark1.json  benchmark1c.json  benchmark1cpp.json  benchmark2.json  benchmark2c.json  benchmark2cpp.json  benchmark3.json  benchmark3c.json  benchmark3cpp.json
src/: CMakeLists.txt  cutoffs.h  size.h  write.hpp
src/1/: serial_.c  serial_.h  testing.hpp
src/1/c/: CMakeLists.txt  benchmark.cpp  mpi_.c  mpi_.h  openmp_.c  openmp_.h  pthread_.c  pthread_.h  serial_.h
src/1/c/test/: test_openmp.cpp  test_pthread.cpp
src/1/cpp/: CMakeLists.txt  benchmark.cpp  mpi_.cpp  mpi_.hpp  serial_.cpp  serial_.hpp  std.hpp  std_.cpp  std_.hpp  tbb_.cpp  tbb_.hpp
src/1/cpp/test/: test_std.cpp  test_tbb.cpp
src/2/c/: CMakeLists.txt  dictionary.h  openmp_.c  openmp_.h  serial_.c  serial_.h
src/2/cpp/: CMakeLists.txt  serial_.cpp  serial_.hpp  std_.cpp  std_.hpp  tbb_.cpp  tbb_.hpp
src/3/c/: CMakeLists.txt  mpi_.c  mpi_.h  openmp_.h  serial_.h
src/3/cpp/: CMakeLists.txt  mpi_.cpp  mpi_.hpp  serial_.cpp  serial_.hpp  std_.cpp  std_.hpp  tbb_.cpp  tbb_.hpp
test/: CMakeLists.txt  mpi_c_test.cpp  mpi_cpp_test.cpp  mpi_test.cpp  mpi_test_c_search.hpp  mpi_test_c_vector_mult.hpp  mpi_test_cpp.cpp  mpi_test_cpp_search.hpp  mpi_test_cpp_vector_mult.hpp  mpi_test_search.hpp  mpi_test_vector_mult.hpp  test_all.cpp  test_c_fibonacci.cpp  test_c_fibonacci.hpp  test_c_search.hpp  test_c_vector_mult.cpp  test_c_vector_mult.hpp  test_cpp_fibonacci.hpp  test_cpp_search.hpp  test_cpp_vector_mult.cpp  test_cpp_vector_mult.hpp  test_fibonacci.hpp  test_search.hpp  test_vector_mult.hpp
